--- a/dnb/dnb.Core/packages.config
+++ b/dnb/dnb.Core/packages.config
@@ -4,4 +4,5 @@
   <package id="MvvmCross.Binding" version="5.0.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Core" version="5.0.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Platform" version="5.0.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
