--- a/dnb/dnb.Core/dnb.Core.csproj
+++ b/dnb/dnb.Core/dnb.Core.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Entities\LegalGuardianEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Calculation.cs" />
     <Compile Include="Services\ICalculation.cs" />
